<resources>
    <string name="app_name">SmartHomeTEC-MobileApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="userID">UserID</string>
    <string name="goMain">Manage devices</string>
    <string name="profileTitle">USER PROFILE</string>
    <string name="emailTitle">E-mail</string>
    <string name="addRoom">Add a Room</string>
    <string name="addDevice">Add a Device</string>
    <string name="syncData">Sync On/Off</string>
    <string name="URL_SOURCE">https://10.0.2.2:5001/</string>
</resources>